add database access

--- a/aspnet-core/Canteen_2022/appsettings.json
+++ b/aspnet-core/Canteen_2022/appsettings.json
@@ -6,7 +6,7 @@
     "RedirectAllowedUrls": "http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Port=3306;Database=Canteen_2022;Uid=root;Pwd=myPassword;"
+    "Default": "Server=localhost;Port=3306;Database=Canteen_2022;Uid=dotnet;Pwd=CanteeN123$;"
   },
   "AuthServer": {
     "Authority": "https://localhost:44328",
